changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Don't send pickup information if not explicitely asked for.
 server/c_object.c
Nicolas Weeger 2010-04-07

Fix potential crash when changing class.
 plugins/cflogger/cflogger.c
Nicolas Weeger 2010-04-07

Fix crash if 'add_me' was sent multiple times.
 socket/request.c
Nicolas Weeger 2010-04-07

Commit account management code.  Seems mature enough for general use - probably
a few bugs.  What this adds is an account that characters use to log in,
at which point they then choose what character they want to play.
---
doc/Developers/protocol: Fix some formatting, clarify some points, make
    some revisions to account protocol commands.
include/account_char.h: Move MAX_CHARACTERS_PER_ACCOUNT to this
    file so other files to access it.                        
include/newserver.h: Add login_method to socket structure.
include/sockproto.h: Update for new functions.
include/sproto.h: Update for new functions.
lib/Makefile.am: Have it make account directory if it does not exist.
server/account.c: Fix bug related to loading when only 1 character
    is associated with account.  Change account_exists() to return
    proper name of account.  Clean up some function declarations
    and bugs.  Add some new functions to get character/account
    data.
server/account_char.c: Fix typo and minor errors in error message.
server/c_misc.c: Update check_login() for 2 params
server/init.c: Add call to load account information.
server/login.c: Save account information.  Modify check_login() for
    account logins which bypass password checking.