@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Keep rough monster experience for maps. Dump region experience after parsing.
+ utils/cre/CREMapInformation.{h,cpp} CREMapInformationManager.{cpp,h}
+Nicolas Weeger 2010-04-07
+
 Don't send pickup information if not explicitely asked for.
  server/c_object.c
 Nicolas Weeger 2010-04-07
